--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 `r2r` provides a flexible implementation of hash tables in R, allowing for:
 
 - arbitrary R objects as keys and values,
-- arbitrary key hashing and comparison functions,
+- arbitrary key comparison and hash functions,
 - customizable behaviour (throw or return a default values) on missing key exceptions.
 
 ## Installation
