Mention 'throw = T' possibility

--- a/README.Rmd
+++ b/README.Rmd
@@ -110,6 +110,14 @@ for (object in objects)
 m[["1"]]
 ```
 
+Alternatively, you may throw an exception upon querying a missing key:
+
+```{r}
+m <- map(throw = TRUE)
+tryCatch(m[["Missing key"]], error = function(cnd) "Oops!")
+```
+
+
 #### Using custom key comparison and hash functions
 `map`s and `set`s use by default `base::identical()` to compare keys. For instance:
 
