--- a/README.Rmd
+++ b/README.Rmd
@@ -129,7 +129,7 @@ m[[1]]
 ```
 
 This behavior can be changed by explicitly providing a key comparison function.
-For this to work correctly, one must also explicitly provide an hash function which produces the same hashes for equivalent keys. A simple way to do this is to compose the `default_hash()` function with a key preprocessing function; this is illustrated in the following example.
+For this to work correctly, one must also explicitly provide an hash function which produces the same hashes for equivalent keys. A simple way to do this is to compose the `default_hash_fn()` function with a key preprocessing function; this is illustrated in the following example.
 
 We assume that keys are length one complex numbers, and consider two keys equivalent when they have the same direction in the complex plane. A sensible comparison function is:
 
@@ -141,7 +141,7 @@ compare <- function(z1, z2)
 An hash function which depends only on the arguments of `z` is clearly given by:
 
 ```{r}
-hash <- function(z) default_hash(Arg(z))
+hash <- function(z) default_hash_fn(Arg(z))
 ```
 
 Thus we create our map as:
