--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # r2r
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/vgherard/r2r/workflows/R-CMD-check/badge.svg)](https://github.com/vgherard/r2r/actions)
 <!-- badges: end -->
 
 `r2r` provides a flexible implementation of hash tables in R, allowing for:
