--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 - arbitrary R objects as keys and values,
 - arbitrary key comparison and hash functions,
-- customizable behaviour (throw or return a default values) on missing key exceptions.
+- customizable behaviour (throw or return a default value) on missing key exceptions.
 
 ## Installation
 
